--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
+  background-color: rgb(93, 141, 184);
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+h1{
+  font-size: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2{
+  font-size: 30px;
+}
+
+h2:hover{
+  color: whitesmoke;
+  cursor: pointer;
+  font-size: 31px;
+}
+
+h3{
+  font-size: 20px;
+  margin-bottom: 0;
+}
+
+h5{
+  font-size: 25px;
+  color: rgb(118, 32, 32);
+  margin: 0;
+}
+
+.game-lines{
+  text-align: center;
+  padding: 0 5px;
+}
+
+p{
+  font-size: 20px;
+  margin-bottom: 0;
 }
